Added video file

--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,8 @@ button:hover,
 }
 
 #units {
-  border-radius: 0 0 15px 15px;
+  border-radius: 15px;
+  margin-top: 0.6rem;
   margin-bottom: 0.6rem;
 }
 
@@ -253,7 +254,7 @@ button:hover,
 }
 
 #about {
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px;
   margin-top: 10px;
 }
 #about .absolute {
